--- a/lang/en_US.json
+++ b/lang/en_US.json
@@ -381,5 +381,9 @@
   "voice_change_afk_false": "{user} (``{user_id}``) is no longer AFK in voice",
   "connected_to_voice": "{user} (``{user_id}``) has connected to **{channel_name}** (``{channel_id}``)",
   "moved_voice": "{user} (``{user_id}``) has moved from **{old_channel_name}** (``{old_channel_id}``) to **{new_channel_name}** (``{new_channel_id}``)",
-  "disconnected_voice": "{user} (``{user_id}``) has disconnected from **{channel_name}** (``{channel_id}``)"
+  "disconnected_voice": "{user} (``{user_id}``) has disconnected from **{channel_name}** (``{channel_id}``)",
+  "remind_help": "Sets a reminder. I will DM you after a period of time provided with the reminder. If you don't allow DMs, I'll remind you in the channel you set the reminder in!",
+  "remind_too_large": "Not even I can remember such long wall of text! Try making me remember something smaller than 1800 chars.",
+  "remind_message_dm": "***Reminder!***\n\nYou told me the {start} to remind you the {end} UTC that:\n```{reminderd}````",
+  "remind_message_guild": "***Reminder for {mention}!***\n\nYou told me the {start} to remind you the {end} UTC that:\n```{reminder}```"
 }
